--- a/client/src/components/pages/Homepage.css
+++ b/client/src/components/pages/Homepage.css
@@ -1,1 +1,10 @@
+.Homepage-container {
+    height: 100vh;
+    width: 100vw;
+}
 
+h1 {
+  text-align: center;
+  color: var(--lightgrey);
+  font-size: 15vh;
+}
