fleshed out game logic, need to fix call stack errors

--- a/client/src/components/modules/Chat.css
+++ b/client/src/components/modules/Chat.css
@@ -30,6 +30,7 @@
   margin-top: 1px;
   box-sizing: border-box;
   background-color: var(--softwhite);
+  outline: none;
 }
 
 .Chat-send-input:focus {
