--- a/client/src/components/modules/Game.css
+++ b/client/src/components/modules/Game.css
@@ -58,3 +58,9 @@
 .Game-pending-caption > div {
   margin: 0 auto;
 }
+
+.Game-default {
+  grid-area: main;
+  background-color: var(--darkgrey);
+  border-radius: 4px;
+}
