some changes based on cat/clint's feedback. - rounded all buttons - enlarged title - askbox now autofocuses - equal padding on top/bottom of header - default 30s on asking/answering time - default question-reveal set to false - added paranoia factor tooltip
TODO:
- implement answer failure punishment/exposure system
- implement token system
- implement chat auto-scroll

--- a/client/src/components/modules/AttendeeList.css
+++ b/client/src/components/modules/AttendeeList.css
@@ -12,9 +12,10 @@
 
 .AttendeeList-gridcontainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-gap: 1rem;
   overflow-y: scroll;
+  max-height: calc(42vh - 3vh - 20vh);
 }
 
 .AttendeeList-attendee {
@@ -23,4 +24,5 @@
   color: var(--lightgrey);
   border-radius: 8px;
   padding: 6px;
+  overflow: hidden;
 }
