implemented token system

--- a/client/src/components/modules/NoticeBox.css
+++ b/client/src/components/modules/NoticeBox.css
@@ -31,3 +31,8 @@
   background-color: var(--themedarkblue);
   color: var(--themeblue);
 }
+
+.yellow {
+  background-color: var(--themedarkyellow);
+  color: var(--themeyellow);
+}
